Use redcarpet for rendering markdown

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@
 permalink: :title.html
 encoding: utf-8
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions: ['footnotes', 'tables', 'no_intra_emphasis', 'autolink']
 gems: [ bootstrap-sass, jekyll-haml, jekyll-archives ]
 jekyll-archives:
   enabled: [tags]
