--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 # Site settings
-permalink: :title.html
+paginate: 5
+paginate_path: "/blog/page:num/"
+permalink: :title
 encoding: utf-8
 # Build settings
 markdown: redcarpet
 redcarpet:
   extensions: ['footnotes', 'tables', 'no_intra_emphasis', 'autolink']
-gems: [ bootstrap-sass, jekyll-haml, jekyll-archives ]
+gems: [ bootstrap-sass, jekyll-archives, jekyll-paginate, jekyll-coffeescript ]
 jekyll-archives:
   enabled: [tags]
 defaults:
