--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,27 @@
 # Site settings
-paginate: 5
+paginate: 4
 paginate_path: "/blog/page:num/"
-permalink: :title
 encoding: utf-8
 # Build settings
 markdown: redcarpet
 redcarpet:
   extensions: ['footnotes', 'tables', 'no_intra_emphasis', 'autolink']
-gems: [ bootstrap-sass, jekyll-archives, jekyll-paginate, jekyll-coffeescript ]
 jekyll-archives:
   enabled: [tags]
 defaults:
-  -
-    scope:
-      path: "" # an empty string here means all files in the project
-      type: "posts" # previously `post` in Jekyll 2.2.
+  - scope:
+      path: ""
+      type: "posts"
     values:
       layout: "post"
+      permalink: /blog/:title
+      excerpt_separator: <div id="more"></div> 
+  - scope:
+      path: ""
+      type: hacks
+    values:
+      layout: hack
+      permalink: /:collection/:title/
+collections:
+  hacks:
+    output: true
