--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-domain: 'https://hennevogel.de'
+title: 'hennevogel.de'
+description: 'Personal blog of Henne Vogelsang'
+url: 'https://hennevogel.de'
 paginate: 4
 paginate_path: "/blog/page:num/"
 encoding: utf-8
