--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
       permalink: /:collection/:title/
 collections:
   hacks:
-    output: true
+    output: false
 
 assets:
   digest: true
